--- a/index.html
+++ b/index.html
@@ -465,10 +465,10 @@ p {line-height: 2}
   
 
 
-<p style="text-align:center;" class="code" > Please note that the TBF is not a funding organization and requests for financial assistance cannot be accommodated. <br> </p>
+<!-- <p style="text-align:center;" class="code" > Please note that the TBF is not a funding organization and requests for financial assistance cannot be accommodated. <br> </p>
 
 <p style="text-align:center;" class="code" > Due to the high volume of email sent to the TBF, 
-not all messages can be answered individually. <br> Nonetheless we will do our best to respond to your query. <br> </p>
+not all messages can be answered individually. <br> Nonetheless we will do our best to respond to your query. <br> </p> -->
     
   
   
